AMBARI-26656: Isolate and stabilize Java tests